--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,25 +1,28 @@
 {
   "name": "web",
-  "version": "1.0.0",
-  "private": true,
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "@astrojs/solid-js": "^2.1.0",
+    "@packages/api": "workspace:*",
+    "@packages/ui": "workspace:*",
+    "@tanstack/solid-query": "5.0.0-alpha.16",
+    "@trpc/client": "^10.20.0",
+    "astro": "^2.3.0",
+    "solid-js": "^1.7.3",
+    "solid-trpc": "0.0.11-rc.3",
+    "superjson": "1.9.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "@packages/preset-unocss": "workspace:*",
+    "@unocss/reset": "^0.51.4",
+    "unocss": "^0.51.4"
   }
 }
