--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "dotenv -- turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.7",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0",
-  "name": "aether-stack"
+  "name": "aether-stack",
+  "dependencies": {
+    "dotenv-cli": "^7.2.1"
+  }
 }
