--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^2.1.0",
+    "@astrojs/vercel": "^3.2.4",
     "@packages/api": "workspace:*",
     "@packages/ui": "workspace:*",
     "@tanstack/solid-query": "5.0.0-alpha.16",
