--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@astrojs/vercel": "^3.2.4",
     "@packages/api": "workspace:*",
     "@packages/ui": "workspace:*",
+    "@packages/auth": "workspace:*",
     "@tanstack/solid-query": "5.0.0-alpha.16",
     "@trpc/client": "^10.20.0",
     "astro": "^2.3.0",
