--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "unocss.root": ["packages/unocss", "packages/ui", "apps/web"],
-  "search.useIgnoreFiles": false,
-  "search.exclude": {
-    "**/node_modules": false
-  }
+  "unocss.root": ["packages/unocss", "packages/ui", "apps/web"]
 }
