--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@packages/preset-ts/tsconfig/base.json",
   "include": ["."],
   "exclude": ["dist", "build", "node_modules", ".turbo"]
 }
