--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "@packages/preset-ts/tsconfig/base.json",
   "include": ["."],
-  "exclude": ["dist", "build", "node_modules", ".turbo"]
+  "exclude": ["dist", "build", "node_modules", ".turbo"],
+  "compilerOptions": {
+    "declaration": false,
+    "declarationMap": false
+  }
 }
