--- a/packages/unocss/package.json
+++ b/packages/unocss/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@packages/preset-ts": "workspace:*",
     "@unocss/preset-uno": "^0.51.4",
-    "unocss": "^0.51.4"
+    "unocss": "^0.51.4",
+    "unocss-preset-theme": "^0.6.0"
   }
 }
