--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
     "@packages/db": "workspace:*",
     "@trpc/client": "^10.20.0",
     "@trpc/server": "^10.20.0",
+    "@vercel/edge": "^0.3.2",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
