--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
-      "outputs": [".next/**", ".astro/**"]
+      "outputs": [".next/**", ".astro/**", "dist/**"]
     },
     "lint": {},
     "dev": {
